--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 all:
-	g++ -Wall -pedantic -std=c++11 main.cc -o main -lsimlib -lm
+	g++ -Wall -pedantic -std=c++11 ims.cc -o ims -lsimlib -lm
 run:
 	./main
 
